# forge-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  docker-compose.yaml  forge-ai-planning.md  forge.yaml.example  pyproject.toml  skaffold.yaml
.github/workflows/: ci.yaml  release.yaml
deploy/helm/forge/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.yaml
deploy/helm/forge/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  gateway-deployment.yaml  hpa.yaml  ingress.yaml  litellm-deployment.yaml  pdb.yaml  redis-deployment.yaml  (+3 more)
docs/: _config.yml  index.md
docs/_includes/: callout.html  footer.html  head.html  header.html  sidebar.html  toc.html
docs/_layouts/: api.html  default.html  page.html
docs/_sass/: _base.scss  _code.scss  _components.scss  _content.scss  _layout.scss  _navigation.scss  _responsive.scss  _variables.scss
docs/assets/css/: main.scss
docs/assets/js/: clipboard.js  navigation.js  search.js  toc.js
docs/developer/: api-reference.md  architecture.md  code-style.md  contributing.md  index.md  setup.md  testing.md
docs/technical/: data-model.md  index.md  infrastructure.md  monitoring.md  performance.md  security.md  system-design.md
docs/user/: configuration.md  faq.md  getting-started.md  index.md  troubleshooting.md
docs/user/features/: chat.md  config-builder.md  dashboard.md  peers.md  security.md  tools.md
e2e-tests/: conftest.py  pytest.ini
e2e-tests/tests/: test_a2a.py  test_api_admin.py  test_conversational.py  test_edge_cases.py  test_health.py  test_metrics.py  test_middleware.py  test_programmatic.py  test_swagger.py  test_ui_chat.py  test_ui_config.py  test_ui_dashboard.py  test_ui_guide.py  test_ui_peers.py  test_ui_responsive.py  test_ui_security.py  test_ui_tools.py
